# drogue-ffi-compat

./: Cargo.toml  build.rs
src/: lib.rs  variadic.rs
src/printf/: format.rs  mod.rs
