[package]
name = "drogue-ffi-compat"
version = "0.1.0"
authors = ["Bob McWhirter <bmcwhirt@redhat.com>"]
edition = "2018"

[lib]
name = "drogue_ffi_compat"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
heapless = "0.5.5"

[build-dependencies]
cc = "1.0.59"